# event-based-vio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  create_modules.py  generate_matches.py  gsd_mvsec_ensemble_plan.md  plan.md  plot_global_route.py  plot_global_zones.py  print_coords.py  pyproject.toml  regenerate_drone.py  ruff_errors.txt  satellite_drone_keypoint_matching_task.md  satellite_drone_matcher.py  skills-lock.json  test_map_anchoring.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: dataset-pipeline-engineer.agent.md  evaluation-ensemble-engineer.agent.md  vio-baseline-engineer.agent.md
.github/instructions/: agent_maintenance_workflow.instructions.md  code_writing_behavior.instructions.md  delegation_policy.instructions.md  python_quality_gates.instructions.md  qa_readonly.instructions.md  tests.instructions.md
.github/scripts/: aps_tools_common.sh  crap_check.py  dry_check.py  precommit_coverage_gate.sh  precommit_gherkin_mutation_gate.sh  precommit_language_mutation_gate.py  resolve_gsd_slice.py  run_acceptance_mutation_worker.sh
.github/workflows/: ci-gherkin-mutation.yml  ci-language-mutation.yml  ci-lint.yml  ci-mutation.yml  ci-slow-lane.yml  ci-structure.yml  jules_auto_merge.yml  jules_next_task.yml
.gsd/: CODEBASE.md  CONTEXT.md  DECISIONS.md  OVERRIDES.md  PREFERENCES.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
configs/: google_earth_sequence.yaml
docs/: rl-ensemble.md
docs/baselines/: external.md
docs/datasets/: mvsec.md
docs/evaluation/: drift-evaluation.md
docs/run/: cli.md  mvsec-manual-runs.md
docs/trajectory/: export-contract.md  synchronization.md
examples/: inspect_mvsec.py
notebooks/: 01_explore_hexacopter_dataset.ipynb  02_odometry_baselines_hexacopter.ipynb  03_ensembles_hexacopter.ipynb  04_ensemble_merging_explained.ipynb  05_jepa_perception.ipynb  README.md
outputs/blurred_drone_match/: estimated_pose.geojson  match_result.json
outputs/example_match/: estimated_pose.geojson  match_result.json
scripts/: convert_mvsec_bag_to_h5.py  download_mvsec.sh  draw_routes.py  experiment_routes.py  simulate_drone.py
src/map_matching/: aoi.py  confidence.py  features.py  geometry.py  matching.py  preprocess.py  raster_io.py  visualize.py
src/nav_benchmark/: __main__.py  (+2 more)
tests/: conftest.py  test_benchmark_comparison.py  test_cross_method_schema.py  test_estimator.py  test_event_processor.py  test_imu_processor.py  test_validation.py
tools/: build_events_from_rgb.py  preview_sequence.py  record_google_earth_sequence.py  validate_sequence.py
(+282 files in other folders)
